--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   },
   "devDependencies": {
     "mocha": "~1.9.0",
-    "expect.js": "~0.2.0"
+    "expect.js": "~0.2.0",
+    "express": "~3.2.3",
+    "browserify-middleware": "~1.9.0"
   }
 }
