--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mocha": "~1.9.0",
     "expect.js": "~0.2.0",
     "express": "~3.2.3",
-    "browserify-middleware": "~1.9.0"
+    "browserify-middleware": "~1.9.0",
+    "es5-shim": "~2.0.9"
   }
 }
