--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "expect.js": "~0.2.0",
     "express": "~3.2.3",
     "browserify-middleware": "~1.9.0",
+    "browserify": "git://github.com/SLaks/node-browserify.git#include-filenames",
+    "browser-pack": "git://github.com/SLaks/browser-pack.git#full-module-api",
     "es5-shim": "~2.0.9"
   }
 }
